[package]
name = "pianoroll"
version = "0.1.0"
authors = ["Bill Fraser <wfraser@codewise.org>"]

[dependencies]
pdf-canvas = "0.5.4"
#nom-midi = { version = "0.2.0", optional = true }
#nom-midi = { git = "https://github.com/wfraser/nom-midi-rs", branch = "notes-octave-fix" }
nom-midi = { git = "https://github.com/wfraser/nom-midi-rs", branch = "master", features = ["verbose-errors"], optional = true }
ghakuf = { version = "*", optional = true }

[features]
default = ["ghakuf"]
